--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,7 @@
         android:layout_below="@+id/budgetTitleTextView"
         android:layout_alignStart="@+id/budgetTitleTextView"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        tools:progress="50" />
+        android:layout_marginEnd="16dp" />
 
     <TextView
         android:id="@+id/budgetTextView"
@@ -35,8 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/budgetProgressBar"
         android:layout_alignEnd="@+id/budgetProgressBar"
-        android:layout_marginTop="4dp"
-        tools:text="150,000원 / 500,000원" />
+        android:layout_marginTop="4dp"  />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/expenseRecyclerView"
