--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -1,37 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--
+지출 내역을 새로 추가하는 화면의 레이아웃입니다.
+세로 방향 리니어 레이아웃을 사용하여 위젯을 배치했습니다.
+-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:background="#F5F5F5"
+    tools:context=".AddExpenseActivity">
 
+    <!-- 1. 지출 항목 입력란 -->
     <EditText
-        android:id="@+id/expenseNameEditText"
+        android:id="@+id/itemNameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:hint="지출 내역 (예: 점심 식사)" />
+        android:hint="지출 항목 (예: 점심 식사)" />
 
+    <!-- 2. 금액 입력란 -->
     <EditText
-        android:id="@+id/expenseAmountEditText"
+        android:id="@+id/itemAmountEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/expenseNameEditText"
         android:layout_marginTop="8dp"
-        android:hint="금액 (원)"
+        android:hint="금액"
         android:inputType="number" />
 
-    <Spinner
-        android:id="@+id/categorySpinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/expenseAmountEditText"
-        android:layout_marginTop="8dp" />
+    <!--
+    3. 빈 공간
+    layout_weight 속성을 사용하여, 위젯들을 제외한 모든 남는 세로 공간을 차지합니다.
+    이로 인해 '저장' 버튼이 항상 화면 맨 아래에 위치하게 됩니다.
+    -->
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
+    <!-- 4. '저장' 버튼 -->
     <Button
         android:id="@+id/saveButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="저장하기" />
+        android:backgroundTint="#2196F3"
+        android:text="저장"
+        android:textColor="@android:color/white" />
 
-</RelativeLayout>
+</LinearLayout>
